# WordlySFML

./: CMakeLists.txt  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameWindow.cpp  GameWindow.h  LetterTile.cpp  LetterTile.h  README.md  StartWindow.cpp  StartWindow.h  StringFactory.cpp  StringFactory.h  Window.cpp  Window.h  Word.cpp  Word.h  appPara.h  conanfile.txt  main.cpp  outsort_words  sfml-app
resources/: outsort_words.cpp  slowa_5liter.txt
